# text2sql

./: Dockerfile  README.md  database.py  main.py  pyproject.toml
